testsuite/tests/properties/invalid_new/positional.lkt
import common

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(12, 15)
}
